# locksign

./: .gitignore  Cargo.toml  DOCS.md  README.md  build.rs  config.toml
proto/: common.proto  ethereum.proto  solana.proto
src/: errors.rs  main.rs
src/api/: auth.rs  grpc.rs  mod.rs
src/config/: mod.rs
src/crypto/: eth.rs  mod.rs  sol.rs
src/keystore/: encrypted.rs  loader.rs  memory.rs  mod.rs
src/policy/: engine.rs  mod.rs  rules.rs
src/security/: mlock.rs  mod.rs  zeroize.rs
src/signer/: ethereum.rs  mod.rs  solana.rs
