[package]
name = "locksign"
version = "0.1.0"
edition = "2024"
description = "Secure, in-memory blockchain signing service for Ethereum & Solana"
license = "MIT"
repository = "https://github.com/yourorg/locksign"
keywords = ["blockchain", "ethereum", "solana", "signing", "security"]
categories = ["cryptography", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "fs"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# Ethereum
ethers-core = "2.0"
k256 = { version = "0.13", features = ["ecdsa"] }

# Solana
solana-sdk = "2.3.1"

ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Security
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.3", features = ["derive"] }
nix = { version = "0.26", features = ["mman"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
config = "0.14"

# Hex encoding
hex = "0.4"

# SHA3 for Ethereum
sha3 = "0.10"

base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.4"
tempfile = "3.24.0"
[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "locksign"
path = "src/main.rs"
